# xianSkill

./: .dockerignore  .gitignore  AGENT.md  README.md  build.bat  build.sh  start.bat  start.sh  自动化服务思路.txt  闲管家接口.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  worker.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  health.py  public.py  schemas.py  xgj_erp.py  xgj_virtual.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  url_builder.py
backend/app/domain/: __init__.py  models.py
backend/app/infra/: __init__.py  queue.py  storage.py  webhook.py
backend/app/runners/: __init__.py  base.py  prompt_runner.py
backend/app/services/: __init__.py  ai_provider_service.py  job_service.py  push_service.py  token_service.py
backend/app/tasks/: execute_job.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_m1_core_tables.py  0002_m3_human_delivery.py  0003_projects.py  0004_sku_project_id.py  0005_projects_skill_id.py  0006_jobs_log_hash_cols.py  0007_goods_virtual_source.py  0008_goods_add_logo_multispec_xgj.py  0009_goods_spec_groups.py  0010_goods_xgj_structured.py  0011_xgj_shops.py  0012_goods_publish_shop_xgj_shop_id.py  0013_goods_specs_xgj_sku.py  0014_skus_delivery_content_template.py  0015_xgj_reward_modes.py  0016_ai_providers.py  0017_push_channels.py
backend/tests/: conftest.py  test_ai_providers.py  test_health.py  test_human_push_flow.py  test_m1_flow.py  test_xgj_goods_sync.py  test_xgj_virtual_flow.py
(+67 files in other folders)
